--- a/src/resource.rc
+++ b/src/resource.rc
@@ -4,15 +4,15 @@
 #include "resource.h"
 
 1 VERSIONINFO
-FILEVERSION 1, 2, 0, 0
+FILEVERSION 1, 2, 1, 0
 FILEOS VOS_DOS_WINDOWS32
 FILETYPE VFT_APP {
 	BLOCK "StringFileInfo" {
 		BLOCK "040904E4" {
 			VALUE "FileDescription", "SQLite GUI\000"
-			VALUE "FileVersion", "1.2.0\000"
+			VALUE "FileVersion", "1.2.1\000"
 			VALUE "ProductName", "sqlite-gui\000"
-			VALUE "ProductVersion", "1.2.0\000"
+			VALUE "ProductVersion", "1.2.1\000"
 			VALUE "LegalCopyright", "Copyright \251 Little Brother 2020\000"
 			VALUE "OriginalFilename", "sqlite-gui.exe\000"
 		}
@@ -238,6 +238,16 @@ IDD_TOOL_DATABASE_DIAGRAM DIALOGEX 50,50,550,400
 BEGIN
 END
 
+LANGUAGE 0, SUBLANG_NEUTRAL
+IDD_DDL DIALOGEX 10,10,500,400
+	STYLE WS_OVERLAPPEDWINDOW | WS_CAPTION | WS_SYSMENU | WS_VISIBLE
+	CAPTION "DDL"
+	FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+	CONTROL "",IDC_DLG_EDITOR, "RICHEDIT50W", WS_VISIBLE | ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP | ES_NOHIDESEL | WS_CHILD | ES_READONLY,0,0,498,273,WS_EX_STATICEDGE
+
+END
+
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 IDC_MENU_MAIN MENU
 BEGIN
@@ -376,7 +386,7 @@ BEGIN
 		MENUITEM "Paste", IDM_EDITOR_PASTE
 		MENUITEM "Delete", IDM_EDITOR_DELETE
 		MENUITEM SEPARATOR
-		MENUITEM "Execute", IDM_EXECUTE
+		MENUITEM "Find", IDM_EDITOR_FIND
 	END
 END
 
@@ -404,6 +414,16 @@ BEGIN
 		MENUITEM "Copy row to clipboard", IDM_RESULT_COPY_ROW
 		MENUITEM SEPARATOR
 		MENUITEM "Export to csv", IDM_RESULT_EXPORT
+	END
+END
+
+LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
+IDC_MENU_DIAGRAM MENU
+BEGIN
+	POPUP "Diagram"
+	BEGIN
+		MENUITEM "View data", IDM_EDIT_DATA
+		MENUITEM "View DDL", IDM_DDL
 	END
 END
 
