--- a/sqlite-gui.cbp
+++ b/sqlite-gui.cbp
@@ -31,7 +31,7 @@
 				<Option type="0" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-Os" />
+					<Add option="-O" />
 					<Add option="-std=c++11" />
 					<Add option="-U__STRICT_ANSI__" />
 					<Add option="-DUNICODE" />
