--- a/src/resource.rc
+++ b/src/resource.rc
@@ -4,15 +4,15 @@
 #include "resource.h"
 
 1 VERSIONINFO
-FILEVERSION 1, 2, 2, 0
+FILEVERSION 1, 2, 3, 0
 FILEOS VOS_DOS_WINDOWS32
 FILETYPE VFT_APP {
 	BLOCK "StringFileInfo" {
 		BLOCK "040904E4" {
 			VALUE "FileDescription", "SQLite GUI\000"
-			VALUE "FileVersion", "1.2.2\000"
+			VALUE "FileVersion", "1.2.3\000"
 			VALUE "ProductName", "sqlite-gui\000"
-			VALUE "ProductVersion", "1.2.2\000"
+			VALUE "ProductVersion", "1.2.3\000"
 			VALUE "LegalCopyright", "Copyright \251 Little Brother 2020\000"
 			VALUE "OriginalFilename", "sqlite-gui.exe\000"
 		}
@@ -97,23 +97,25 @@ END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
 IDD_EDITDATA DIALOGEX 50, 50, 500, 300
-	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | WS_VISIBLE | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_SIZEBOX | DS_MODALFRAME
+	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_SIZEBOX | DS_MODALFRAME
 	CAPTION "View/Edit table data"
 	FONT 10, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-	PUSHBUTTON  "+", IDC_DLG_ROW_ADD, 0, 0, 18, 10, WS_CHILD | BS_FLAT | WS_VISIBLE
-	EDITTEXT	IDC_DLG_QUERYFILTER, 20, 0, 300, 10, WS_VISIBLE | WS_BORDER | WS_TABSTOP | WS_CHILD, 0
-	CONTROL "", IDC_DLG_QUERYLIST, WC_LISTVIEW, WS_VISIBLE | WS_VSCROLL | WS_TABSTOP | WS_CHILD | LVS_REPORT, 0, 10, 400, 80, WS_EX_STATICEDGE
+	CONTROL "", IDC_DLG_ROW_ADD, WC_STATIC, SS_LEFT | SS_BITMAP | SS_CENTERIMAGE | SS_NOTIFY, 0, 0, 10, 10, 0
+	CONTROL "", IDC_DLG_ROW_DEL, WC_STATIC, SS_LEFT | SS_BITMAP | SS_CENTERIMAGE | SS_NOTIFY, 11, 0, 10, 10, 0
+	EDITTEXT	IDC_DLG_QUERYFILTER, 22, 0, 300, 10, WS_BORDER | WS_TABSTOP | WS_CHILD, 0
+	CONTROL "", IDC_DLG_REFRESH, WC_STATIC, SS_LEFT | SS_BITMAP | SS_CENTERIMAGE | SS_NOTIFY, 300, 0, 10, 10, 0
+	CONTROL "", IDC_DLG_QUERYLIST, WC_LISTVIEW, WS_VSCROLL | WS_TABSTOP | LVS_REPORT, 0, 10, 400, 80, WS_EX_STATICEDGE
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
 IDD_QUERYLIST DIALOGEX 50, 50, 500, 300
-	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | WS_VISIBLE | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_SIZEBOX | DS_MODALFRAME
+	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_SIZEBOX | DS_MODALFRAME
 	CAPTION "History and Gists"
 	FONT 10, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-	EDITTEXT IDC_DLG_QUERYFILTER, 0, 0, 300, 10, WS_VISIBLE | WS_BORDER | WS_TABSTOP | WS_CHILD, 0
-	CONTROL "", IDC_DLG_QUERYLIST, WC_LISTVIEW, WS_VISIBLE | WS_VSCROLL | WS_TABSTOP | WS_CHILD | LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_NOSORTHEADER, 0, 10, 400, 80, WS_EX_STATICEDGE
+	EDITTEXT IDC_DLG_QUERYFILTER, 0, 0, 300, 10, WS_BORDER | WS_TABSTOP, 0
+	CONTROL "", IDC_DLG_QUERYLIST, WC_LISTVIEW, WS_VSCROLL | WS_TABSTOP | LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_NOSORTHEADER, 0, 10, 400, 80, WS_EX_STATICEDGE
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
@@ -143,7 +145,7 @@ BEGIN
 	CONTROL         "", IDC_DLG_STARTUP, WC_EDIT, WS_VISIBLE | WS_BORDER | WS_TABSTOP | WS_CHILD | ES_MULTILINE | ES_AUTOHSCROLL | ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL, 5, 155, 190, 30, 0
 
 	PUSHBUTTON "OK", IDC_DLG_OK, 70, 196, 60, 14, WS_TABSTOP
-	PUSHBUTTON "Cancel",IDC_DLG_CANCEL, 135, 196, 60, 14, WS_TABSTOP
+	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 135, 196, 60, 14, WS_TABSTOP
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
@@ -544,4 +546,7 @@ END
 
 IDI_LOGO ICON "resources/logo.ico"
 IDB_TOOLBAR BITMAP "resources/toolbar.bmp"
+IDB_BTN_ADD BITMAP "resources/btn_add.bmp"
+IDB_BTN_DELETE BITMAP "resources/btn_delete.bmp"
+IDB_BTN_REFRESH BITMAP "resources/btn_refresh.bmp"
 IDB_DIAGRAM_TOOLBAR BITMAP "resources/toolbar_diagram.bmp"
