--- a/src/resource.rc
+++ b/src/resource.rc
@@ -4,15 +4,15 @@
 #include "resource.h"
 
 1 VERSIONINFO
-FILEVERSION 1, 2, 3, 0
+FILEVERSION 1, 3, 0, 0
 FILEOS VOS_DOS_WINDOWS32
 FILETYPE VFT_APP {
 	BLOCK "StringFileInfo" {
 		BLOCK "040904E4" {
 			VALUE "FileDescription", "SQLite GUI\000"
-			VALUE "FileVersion", "1.2.3\000"
+			VALUE "FileVersion", "1.3.0\000"
 			VALUE "ProductName", "sqlite-gui\000"
-			VALUE "ProductVersion", "1.2.3\000"
+			VALUE "ProductVersion", "1.3.0\000"
 			VALUE "LegalCopyright", "Copyright \251 Little Brother 2020\000"
 			VALUE "OriginalFilename", "sqlite-gui.exe\000"
 		}
@@ -103,7 +103,7 @@ IDD_EDITDATA DIALOGEX 50, 50, 500, 300
 BEGIN
 	CONTROL "", IDC_DLG_ROW_ADD, WC_STATIC, SS_LEFT | SS_BITMAP | SS_CENTERIMAGE | SS_NOTIFY, 0, 0, 10, 10, 0
 	CONTROL "", IDC_DLG_ROW_DEL, WC_STATIC, SS_LEFT | SS_BITMAP | SS_CENTERIMAGE | SS_NOTIFY, 11, 0, 10, 10, 0
-	EDITTEXT	IDC_DLG_QUERYFILTER, 22, 0, 300, 10, WS_BORDER | WS_TABSTOP | WS_CHILD, 0
+	EDITTEXT	IDC_DLG_QUERYFILTER, 22, 0, 300, 10, WS_BORDER | WS_TABSTOP, 0
 	CONTROL "", IDC_DLG_REFRESH, WC_STATIC, SS_LEFT | SS_BITMAP | SS_CENTERIMAGE | SS_NOTIFY, 300, 0, 10, 10, 0
 	CONTROL "", IDC_DLG_QUERYLIST, WC_LISTVIEW, WS_VSCROLL | WS_TABSTOP | LVS_REPORT, 0, 10, 400, 80, WS_EX_STATICEDGE
 END
@@ -119,7 +119,7 @@ BEGIN
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
-IDD_SETTINGS DIALOGEX 50, 50, 200, 215
+IDD_SETTINGS DIALOGEX 50, 50, 200, 230
 	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | WS_VISIBLE | DS_MODALFRAME
 	CAPTION "Settings"
 	FONT 8, "MS Shell Dlg", 400, 0, 0x1
@@ -134,18 +134,19 @@ BEGIN
 	AUTOCHECKBOX	"Editor highlighter", IDC_DLG_USE_HIGHLIGHT, 5, 65, 180, 16, BS_NOTIFY
 	AUTOCHECKBOX	"Unsafe renaming (pragma legacy_alter_table = 1)", IDC_DLG_USE_LEGACY, 5, 80, 180, 16, BS_NOTIFY
 	AUTOCHECKBOX	"App exit by escape", IDC_DLG_EXIT_BY_ESCAPE, 5, 95, 180, 16, BS_NOTIFY
+	AUTOCHECKBOX	"Query table/view data in a current tab", IDC_DLG_QUERY_IN_CURR_TAB, 5, 110, 180, 16, BS_NOTIFY
 
-	LTEXT		   "Editor indent", IDC_DLG_LABEL, 5, 114, 50, 14, SS_LEFT
-	COMBOBOX		IDC_DLG_INDENT, 55, 111, 65, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
+	LTEXT		   "Editor indent", IDC_DLG_LABEL, 5, 129, 50, 14, SS_LEFT
+	COMBOBOX		IDC_DLG_INDENT, 55, 126, 65, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
 
-	LTEXT		   "Max rows in result output. Use 0  to unlimited.", IDC_DLG_LABEL, 5, 129, 150, 14, SS_LEFT
-	EDITTEXT		IDC_DLG_ROW_LIMIT, 155, 127, 38, 12, WS_VISIBLE | WS_BORDER | WS_TABSTOP | WS_CHILD | ES_CENTER | ES_NUMBER
+	LTEXT		   "Max rows in result output. Use 0  to unlimited.", IDC_DLG_LABEL, 5, 144, 150, 14, SS_LEFT
+	EDITTEXT		IDC_DLG_ROW_LIMIT, 155, 142, 38, 12, WS_VISIBLE | WS_BORDER | WS_TABSTOP | WS_CHILD | ES_CENTER | ES_NUMBER
 
-	LTEXT		   "Execute on database connection", IDC_DLG_LABEL, 5, 144, 150, 14, SS_LEFT
-	CONTROL         "", IDC_DLG_STARTUP, WC_EDIT, WS_VISIBLE | WS_BORDER | WS_TABSTOP | WS_CHILD | ES_MULTILINE | ES_AUTOHSCROLL | ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL, 5, 155, 190, 30, 0
+	LTEXT		   "Execute on database connection", IDC_DLG_LABEL, 5, 159, 150, 14, SS_LEFT
+	CONTROL         "", IDC_DLG_STARTUP, WC_EDIT, WS_VISIBLE | WS_BORDER | WS_TABSTOP | WS_CHILD | ES_MULTILINE | ES_AUTOHSCROLL | ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL, 5, 170, 190, 30, 0
 
-	PUSHBUTTON "OK", IDC_DLG_OK, 70, 196, 60, 14, WS_TABSTOP
-	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 135, 196, 60, 14, WS_TABSTOP
+	PUSHBUTTON "OK", IDC_DLG_OK, 70, 211, 60, 14, WS_TABSTOP
+	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 135, 211, 60, 14, WS_TABSTOP
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
@@ -286,6 +287,7 @@ BEGIN
 	POPUP "Tools"
 	BEGIN
 		MENUITEM "Database diagram", IDM_DATABASE_DIAGRAM, GRAYED
+		MENUITEM "Workflow manager", IDM_WORKFLOW_MANAGER, GRAYED
 		MENUITEM SEPARATOR
 		MENUITEM "Execute SQL file", IDM_IMPORT_SQL, GRAYED
 		MENUITEM "Import from CSV file", IDM_IMPORT_CSV, GRAYED
@@ -451,6 +453,7 @@ BEGIN
 	"X", IDM_EXIT, ALT, VIRTKEY
 	"O", IDM_OPEN, CONTROL, VIRTKEY
 	"Q", IDM_CLOSE, CONTROL, VIRTKEY
+	VK_F5, IDM_REFRESH, VIRTKEY
 	VK_RETURN, IDM_EXECUTE, CONTROL, VIRTKEY
 	VK_F9, IDM_EXECUTE, VIRTKEY
 	VK_RETURN, IDM_EXECUTE_BATCH, CONTROL ALT, VIRTKEY
@@ -462,6 +465,9 @@ BEGIN
 	"G", IDM_GISTS, CONTROL, VIRTKEY
 	VK_TAB, IDM_PROCESS_TAB, VIRTKEY
 	VK_TAB, IDM_PROCESS_TAB, SHIFT, VIRTKEY
+
+	VK_TAB, IDM_CHANGE_FOCUS, CONTROL SHIFT, VIRTKEY
+
 	VK_TAB, IDM_NEXT_RESULT, CONTROL, VIRTKEY
 	"N", IDM_OPEN_EDITOR, CONTROL, VIRTKEY
 	VK_ESCAPE, IDM_CLOSE_EDITOR, CONTROL ALT, VIRTKEY
@@ -478,7 +484,8 @@ BEGIN
 	IDS_ABOUT "Sqlite-gui is a visual tool for SQLite database.\nVisit our homepage to get the source code and latest binaries.\n\nLittle Brother (c) 2020\nlb.im@ya.ru"
 	IDS_HOTKEYS "Global\n" \
 		"Esc - App exit\n" \
-		"Tab/Shift + Tab - Switch between the tree, the editor and the result panel\n" \
+		"F5 - Refresh navigation tree\n" \
+		"Tab + Ctrl + Shift - Switch between the tree, the editor and the result panel\n" \
 		"Ctrl + O - Open database\n" \
 		"Ctrl + Q - Close database\n" \
 		"Ctrl + N - New editor\n" \
@@ -488,11 +495,13 @@ BEGIN
 		"F8/Alt + Enter - Show query plan\n" \
 		"F9/Ctrl + Enter - Execute query\n" \
 		"F12/Ctrl + Alt + Enter - Execute as batch (synchronous is off)\n" \
-		"Tab/Shift + Tab - Add and remove indents in Editor.\n" \
+		"Tab - Add indents in Editor.\n" \
+		"Tab + Shift - Remove indents in Editor.\n" \
 		"Ctrl + ? - Get the table columns desc\n" \
 		"Ctrl + Click - Edit the table data\n" \
 		"Ctrl + Tab - Toggle to a next result\n" \
-		"Ctrl + 1, Ctrl + 2, ... - Sort the result (should be in focus) by column 1, 2, ...\n\n" \
+		"Ctrl + 1, Ctrl + 2, ... - Sort the result (should be in focus) by column 1, 2, ...\n" \
+		"Alt + Click - Show data if the column references to another table by foreign key e.g. execute ""select * from orders"" and click by ""8"" in ""customer_id"" column. You'll see details from customers table for id = 8. \n\n" \
 		"Etc\n" \
 		"Ctrl + Enter - Add row in ""Add row"" dialog\n" \
 		"Ctrl + Enter - Move to next row in ""View row"" dialog\n" \
@@ -501,9 +510,11 @@ BEGIN
 	IDS_TIPS "* To create a new database, go to ""Database"" > ""Open"" and enter the\n   desired name.\n\n" \
 		"* Only the selected part of the query will be executed.\n\n"
 		"* During a transaction the special indicator is displayed inside the status bar.\n\n" \
+		"* By default app uses auto-transaction. All changes are applied immediately.\n\n" \
 		"* To edit data in an attached database or temp schema, type in Editor\n  <db alias>.<tablename>, e.g. preferences.history\n   and click with holding Ctrl by it.\n\n"
 		"* SQLite supports a limited subset of ALTER. So there is not GUI allows\n   remove/reorder column to an existing table or something like this.\n\n" \
 		"* Do you need a newer version of sqlite?\n  Just replace sqlite3.dll! 32-bit version is required.\n\n" \
+		"* Need details by Alt + Click by a result cell? Edit preferences.refs data.\n   Some records were builded by foreign keys. You can edit them also.\n\n" \
 		"* Data generator requires series and rownum extensions.\n\n" \
 		"Cons\n* Only utf-8 is supported\n* NULL is displayed as an empty string\n* An empty string is set to NULL when data is edit\n* Data diagram isn't accurate with building references in views/triggers\n"
 	IDS_EXTENSIONS "Json1\n" \
@@ -511,22 +522,19 @@ BEGIN
 		"Math\n" \
 		"This library provides common mathematical and string functions: acos, asin, atan, atn2, atan2, acosh, asinh, atanh, difference, degrees, radians, cos, sin, tan, cot, cosh, sinh, tanh, coth, exp, log, log10, power, sign, sqrt, square, ceil, floor, pi, replicate, charindex, leftstr, rightstr, ltrim, rtrim, trim, replace, reverse, proper, padl, padr, padc, strfilter, stdev, variance, mode, median, lower_quartile, upper_quartile.\n\n" \
 		"Series\n" \
-		"Add the generate_series(start, stop, step) table-function\n" \
+		"Adds the generate_series(start, stop, step) table-function\n" \
 		"Example: select * from generate_series(0, 100, 5);\n\n" \
 		"Uuid\n"\
 		"This extension implements uuid(), uuid_str(X) and uuid_blob(X) functions that handling RFC-4122 UUIDs\n\n" \
 		"Regexp\n"\
 		"Implements regexp(regexp, stringToMatch) function and ""B regexp A"" operator. This is a non-POSIX regexp.\n\n" \
-		"* Rownum\n"\
-		"Add the rownum(start) function that providing row numbers in an query result\n" \
-		"Example: select rownum(1), t.* from t;\n\n" \
-		"* Icu\n"\
-		"Add lower2(str) and upper2(str) functions with national symbols support\n" \
-		"select lower2('Û'); returns û\n\n"\
-		"* Exec\n"\
-		"Add the exec(cmd, maxOutputLength = 32000) function that allowed to execute shell command.\n" \
-		"Example: select exec('powershell -nologo ""Get-Content data.json""');\n\n"\
-		"* Custom extensions are available only in sqlite-gui"
+		"Ora\n"\
+		"Adds rownum(start), concat(str1, str2, ...) and decode(expr, key1, value1, key2, value2, ..., defValue) functions.\n\n" \
+		"Icu (third party)\n"\
+		"Adds partial support for national symbols e.g. ""select lower('Û');"" returns ""û""\n\n\n\n" \
+
+		"SQLite Workflow Manager adds auxiliary extensions: assert, exec, odbc and pivot. Check tool's Wiki to get info about them.\n\n"
+
 	IDS_GEN_DICTIONARY "You can define own types to generate one-of-set values by add rows to ""preferences.generators"" table. "\
 		"The type is defined by ""key"" column.\nSet a ""value""-column as null if sometimes generated value should be null."
 
