--- a/src/resource.rc
+++ b/src/resource.rc
@@ -4,15 +4,15 @@
 #include "resource.h"
 
 1 VERSIONINFO
-FILEVERSION 1, 3, 3, 0
+FILEVERSION 1, 3, 4, 0
 FILEOS VOS_DOS_WINDOWS32
 FILETYPE VFT_APP {
 	BLOCK "StringFileInfo" {
 		BLOCK "040904E4" {
 			VALUE "FileDescription", "SQLite GUI\000"
-			VALUE "FileVersion", "1.3.3\000"
+			VALUE "FileVersion", "1.3.4\000"
 			VALUE "ProductName", "sqlite-gui\000"
-			VALUE "ProductVersion", "1.3.3\000"
+			VALUE "ProductVersion", "1.3.4\000"
 			VALUE "LegalCopyright", "Copyright \251 Little Brother 2020\000"
 			VALUE "OriginalFilename", "sqlite-gui.exe\000"
 		}
@@ -425,12 +425,25 @@ BEGIN
 END
 
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
-IDC_MENU_TREE MENU
+IDC_MENU_TABLEVIEW MENU
 BEGIN
-	POPUP "Tree"
+	POPUP "TableView"
 	BEGIN
 		MENUITEM "Add", IDM_ADD
 		MENUITEM "Refresh", IDM_REFRESH
+	END
+END
+
+LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
+IDC_MENU_INDEXTRIGGER MENU
+BEGIN
+	POPUP "IndexTrigger"
+	BEGIN
+		MENUITEM "Add", IDM_ADD
+		MENUITEM "Refresh", IDM_REFRESH
+		MENUITEM SEPARATOR
+		MENUITEM "Enable all", IDM_ENABLE_ALL
+		MENUITEM "Disable all", IDM_DISABLE_ALL
 	END
 END
 
@@ -444,7 +457,7 @@ BEGIN
 		MENUITEM SEPARATOR
 		MENUITEM "Edit", IDM_EDIT
 		MENUITEM "Rename", IDM_RENAME
-		MENUITEM "Delete", IDM_DROP
+		MENUITEM "Delete", IDM_DELETE
 		MENUITEM "Clear", IDM_ERASE_DATA
 		MENUITEM SEPARATOR
 		MENUITEM "Add column", IDM_ADD_COLUMN
@@ -470,7 +483,7 @@ BEGIN
 		MENUITEM SEPARATOR
 		MENUITEM "Rename", IDM_RENAME
 		MENUITEM "Edit", IDM_EDIT
-		MENUITEM "Delete", IDM_DROP
+		MENUITEM "Delete", IDM_DELETE
 	END
 END
 
@@ -481,7 +494,9 @@ BEGIN
 	BEGIN
 		MENUITEM "Rename", IDM_RENAME
 		MENUITEM "Edit", IDM_EDIT
-		MENUITEM "Delete", IDM_DROP
+		MENUITEM "Delete", IDM_DELETE
+		MENUITEM SEPARATOR
+		MENUITEM "Disable", IDM_DISABLE
 	END
 END
 
@@ -492,7 +507,21 @@ BEGIN
 	BEGIN
 		MENUITEM "Rename", IDM_RENAME
 		MENUITEM "Edit", IDM_EDIT
-		MENUITEM "Delete", IDM_DROP
+		MENUITEM "Delete", IDM_DELETE
+		MENUITEM SEPARATOR
+		MENUITEM "Disable", IDM_DISABLE
+	END
+END
+
+LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
+IDC_MENU_DISABLED MENU
+BEGIN
+	POPUP "Disabled"
+	BEGIN
+		MENUITEM "View", IDM_VIEW
+		MENUITEM "Delete", IDM_DELETE
+		MENUITEM SEPARATOR
+		MENUITEM "Enable", IDM_ENABLE
 	END
 END
 
@@ -606,14 +635,16 @@ BEGIN
 		"Editor\n" \
 		"F8/Alt + Enter - Show query plan\n" \
 		"F9/Ctrl + Enter - Execute query\n" \
-		"F12/Ctrl + Alt + Enter - Execute as batch (synchronous is off)\n" \
+		"F12/Ctrl + Alt + Enter - Execute as batch (synchronous is off, joint output)\n" \
 		"Tab - Add indents in Editor.\n" \
 		"Tab + Shift - Remove indents in Editor.\n" \
 		"Ctrl + ? - Get the table columns desc\n" \
 		"Ctrl + Click - Edit the table data\n" \
 		"Ctrl + Tab - Toggle to a next result\n" \
-		"Ctrl + 1, Ctrl + 2, ... - Sort the result (should be in focus) by column 1, 2, ...\n" \
-		"Alt + Click - Show data if the column references to another table by foreign key e.g. execute ""select * from orders"" and click by ""8"" in ""customer_id"" column. You'll see details from customers table for id = 8. \n\n" \
+		"Ctrl + 1, Ctrl + 2, ... - Sort the result (should be in focus) by column 1, 2, ...\n\n" \
+		"Result set/Edit data dialog\n"
+		"Alt + Click - Show data if the column references to another table by foreign key e.g. execute ""select * from orders"" and click by ""8"" in ""customer_id"" column. " \
+		"You'll see details from ""customers"" table for id = 8. Edit ""preferences.refs"" data to change displayed info.\n\n" \
 		"Etc\n" \
 		"Ctrl + Enter - Add row in ""Add row"" dialog\n" \
 		"Ctrl + Enter - Move to next row in ""View row"" dialog\n\n" \
@@ -624,8 +655,8 @@ BEGIN
 		"* To edit data in an attached database or temp schema, type in Editor\n  <db alias>.<tablename>, e.g. preferences.history\n   and click with holding Ctrl by it.\n\n"
 		"* SQLite supports a limited subset of ALTER. So there is not GUI allows\n   remove/reorder column to an existing table or something like this.\n\n" \
 		"* Do you need a newer version of sqlite?\n  Just replace sqlite3.dll! 32-bit version is required.\n\n" \
-		"* Need details by Alt + Click by a result cell? Edit preferences.refs data.\n   Some records were builded by foreign keys. You can edit them also.\n\n" \
 		"* Data generator requires series and rownum extensions.\n\n" \
+		"* Disabled indexes and triggers are stored in ""preferences.disabled"" table.\n\n" \
 		"Cons\n* Only utf-8 is supported\n* NULL is displayed as an empty string\n* An empty string is set to NULL when data is edit\n* Data diagram isn't accurate with building references in views/triggers\n"
 	IDS_EXTENSIONS "Json1\n" \
 		"Various SQL functions and table-valued functions for processing JSON.\n\n" \
@@ -645,11 +676,12 @@ BEGIN
 
 		"SQLite Workflow Manager adds auxiliary extensions: exec, odbc and transform. Check tool's Wiki to get info about them.\n\n"
 
-	IDS_GEN_DICTIONARY "You can define own types to generate one-of-set values by add rows to ""preferences.generators"" table. "\
-		"The type is defined by ""key"" column.\nSet a ""value""-column as null if sometimes generated value should be null."
+	IDS_GEN_DICTIONARY "You can define your own types to generate one-of-set values by add rows to ""preferences.generators"" table. " \
+		"The type is defined by ""key"" column.\nSet a ""value""-column as null if sometimes generated value should be null.\n" \
+		"You should restart master to apply changes."
 
 	IDS_WELCOME "-- Welcome!\n" \
-		"-- Thanks for choosing sqlite-gui. I hope you'll like it.\n" \
+		"-- Thanks for choosing sqlite-gui.\n" \
 		"-- bookstore.sqlite is a demo database for beginners.\n" \
 		"-- Push ""Execute"" to get all rows from ""books"" table\n" \
 		"select * from books;"
