--- a/src/resource.rc
+++ b/src/resource.rc
@@ -4,15 +4,15 @@
 #include "resource.h"
 
 1 VERSIONINFO
-FILEVERSION 1, 3, 5, 0
+FILEVERSION 1, 3, 6, 0
 FILEOS VOS_DOS_WINDOWS32
 FILETYPE VFT_APP {
 	BLOCK "StringFileInfo" {
 		BLOCK "040904E4" {
 			VALUE "FileDescription", "SQLite GUI\000"
-			VALUE "FileVersion", "1.3.5\000"
+			VALUE "FileVersion", "1.3.6\000"
 			VALUE "ProductName", "sqlite-gui\000"
-			VALUE "ProductVersion", "1.3.5\000"
+			VALUE "ProductVersion", "1.3.6\000"
 			VALUE "LegalCopyright", "Copyright \251 Little Brother 2020\000"
 			VALUE "OriginalFilename", "sqlite-gui.exe\000"
 		}
@@ -138,7 +138,7 @@ BEGIN
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
-IDD_SETTINGS DIALOGEX 50, 50, 200, 230
+IDD_SETTINGS DIALOGEX 50, 50, 200, 245
 	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | DS_MODALFRAME
 	CAPTION "Settings"
 	FONT 8, "MS Shell Dlg", 400, 0, 0x1
@@ -158,14 +158,17 @@ BEGIN
 	LTEXT		   "Editor indent", IDC_DLG_LABEL, 5, 129, 50, 14, SS_LEFT
 	COMBOBOX		IDC_DLG_INDENT, 55, 126, 65, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
 
-	LTEXT		   "Max rows in result output. Use 0  to unlimited.", IDC_DLG_LABEL, 5, 144, 150, 14, SS_LEFT
+	LTEXT		   "Max rows in result output. Use 0 as unlimit.", IDC_DLG_LABEL, 5, 144, 150, 14, SS_LEFT
 	EDITTEXT		IDC_DLG_ROW_LIMIT, 155, 142, 38, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
 
-	LTEXT		   "Execute on database connection", IDC_DLG_LABEL, 5, 159, 150, 14, SS_LEFT
-	CONTROL         "", IDC_DLG_STARTUP, WC_EDIT, WS_BORDER | WS_TABSTOP | ES_MULTILINE | ES_AUTOHSCROLL | ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL, 5, 170, 190, 30, 0
+	LTEXT		   "Max rows in terminal output. Use 0 as unlimit.", IDC_DLG_LABEL, 5, 159, 150, 14, SS_LEFT
+	EDITTEXT		IDC_DLG_CLI_ROW_LIMIT, 155, 157, 38, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
 
-	PUSHBUTTON "OK", IDC_DLG_OK, 70, 211, 60, 14, WS_TABSTOP
-	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 135, 211, 60, 14, WS_TABSTOP
+	LTEXT		   "Execute on database connection", IDC_DLG_LABEL, 5, 174, 150, 14, SS_LEFT
+	CONTROL         "", IDC_DLG_STARTUP, WC_EDIT, WS_BORDER | WS_TABSTOP | ES_MULTILINE | ES_AUTOHSCROLL | ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL, 5, 185, 190, 30, 0
+
+	PUSHBUTTON "OK", IDC_DLG_OK, 70, 226, 60, 14, WS_TABSTOP
+	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 135, 226, 60, 14, WS_TABSTOP
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
@@ -659,7 +662,7 @@ BEGIN
 		"* To edit data in an attached database or temp schema, type in Editor\n  <db alias>.<tablename>, e.g. preferences.history\n   and click with holding Ctrl by it.\n\n"
 		"* SQLite supports a limited subset of ALTER. So there is not GUI allows\n   remove/reorder column to an existing table or something like this.\n\n" \
 		"* Do you need a newer version of sqlite?\n  Just replace sqlite3.dll! 32-bit version is required.\n\n" \
-		"* Data generator requires series and rownum extensions.\n\n" \
+		"* Data generator requires ora extension (implemented rownum function).\n\n" \
 		"* Disabled indexes and triggers are stored in ""preferences.disabled"" table.\n\n" \
 		"Cons\n* Only utf-8 is supported\n* NULL is displayed as an empty string\n* An empty string is set to NULL when data is edit\n* Data diagram isn't accurate with building references in views/triggers\n"
 	IDS_EXTENSIONS "Json1\n" \
