--- a/src/resource.rc
+++ b/src/resource.rc
@@ -4,16 +4,16 @@
 #include "resource.h"
 
 1 VERSIONINFO
-FILEVERSION 1, 3, 6, 0
+FILEVERSION 1, 3, 7, 0
 FILEOS VOS_DOS_WINDOWS32
 FILETYPE VFT_APP {
 	BLOCK "StringFileInfo" {
 		BLOCK "040904E4" {
 			VALUE "FileDescription", "SQLite GUI\000"
-			VALUE "FileVersion", "1.3.6\000"
+			VALUE "FileVersion", "1.3.7\000"
 			VALUE "ProductName", "sqlite-gui\000"
-			VALUE "ProductVersion", "1.3.6\000"
-			VALUE "LegalCopyright", "Copyright \251 Little Brother 2020\000"
+			VALUE "ProductVersion", "1.3.7\000"
+			VALUE "LegalCopyright", "Copyright \251 Little Brother 2020-2021\000"
 			VALUE "OriginalFilename", "sqlite-gui.exe\000"
 		}
 	}
@@ -138,7 +138,7 @@ BEGIN
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
-IDD_SETTINGS DIALOGEX 50, 50, 200, 245
+IDD_SETTINGS DIALOGEX 50, 50, 200, 265
 	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | DS_MODALFRAME
 	CAPTION "Settings"
 	FONT 8, "MS Shell Dlg", 400, 0, 0x1
@@ -154,21 +154,22 @@ BEGIN
 	AUTOCHECKBOX	"Unsafe renaming (pragma legacy_alter_table = 1)", IDC_DLG_USE_LEGACY, 5, 80, 180, 16, BS_NOTIFY
 	AUTOCHECKBOX	"App exit by escape", IDC_DLG_EXIT_BY_ESCAPE, 5, 95, 180, 16, BS_NOTIFY
 	AUTOCHECKBOX	"Query table/view data in a current tab", IDC_DLG_QUERY_IN_CURR_TAB, 5, 110, 180, 16, BS_NOTIFY
+	AUTOCHECKBOX	"Beep on query end", IDC_DLG_BEEP_ON_QUERY_END, 5, 125, 180, 16, BS_NOTIFY
 
-	LTEXT		   "Editor indent", IDC_DLG_LABEL, 5, 129, 50, 14, SS_LEFT
-	COMBOBOX		IDC_DLG_INDENT, 55, 126, 65, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
+	LTEXT		   "Editor indent", IDC_DLG_LABEL, 5, 149, 50, 14, SS_LEFT
+	COMBOBOX		IDC_DLG_INDENT, 55, 146, 65, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
 
-	LTEXT		   "Max rows in result output. Use 0 as unlimit.", IDC_DLG_LABEL, 5, 144, 150, 14, SS_LEFT
-	EDITTEXT		IDC_DLG_ROW_LIMIT, 155, 142, 38, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
+	LTEXT		   "Max rows in result output. Use 0 as unlimit.", IDC_DLG_LABEL, 5, 164, 150, 14, SS_LEFT
+	EDITTEXT		IDC_DLG_ROW_LIMIT, 155, 162, 38, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
 
-	LTEXT		   "Max rows in terminal output. Use 0 as unlimit.", IDC_DLG_LABEL, 5, 159, 150, 14, SS_LEFT
-	EDITTEXT		IDC_DLG_CLI_ROW_LIMIT, 155, 157, 38, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
+	LTEXT		   "Max rows in terminal output. Use 0 as unlimit.", IDC_DLG_LABEL, 5, 179, 150, 14, SS_LEFT
+	EDITTEXT		IDC_DLG_CLI_ROW_LIMIT, 155, 177, 38, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
 
-	LTEXT		   "Execute on database connection", IDC_DLG_LABEL, 5, 174, 150, 14, SS_LEFT
-	CONTROL         "", IDC_DLG_STARTUP, WC_EDIT, WS_BORDER | WS_TABSTOP | ES_MULTILINE | ES_AUTOHSCROLL | ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL, 5, 185, 190, 30, 0
+	LTEXT		   "Execute on database connection", IDC_DLG_LABEL, 5, 194, 150, 14, SS_LEFT
+	CONTROL         "", IDC_DLG_STARTUP, WC_EDIT, WS_BORDER | WS_TABSTOP | ES_MULTILINE | ES_AUTOHSCROLL | ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL, 5, 205, 190, 30, 0
 
-	PUSHBUTTON "OK", IDC_DLG_OK, 70, 226, 60, 14, WS_TABSTOP
-	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 135, 226, 60, 14, WS_TABSTOP
+	PUSHBUTTON "OK", IDC_DLG_OK, 70, 246, 60, 14, WS_TABSTOP
+	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 135, 246, 60, 14, WS_TABSTOP
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
@@ -357,6 +358,14 @@ BEGIN
 	CONTROL "",IDC_DLG_EDITOR, "RICHEDIT50W", ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP | ES_NOHIDESEL | ES_READONLY, 0, 0, 498, 273, WS_EX_STATICEDGE
 END
 
+LANGUAGE 0, SUBLANG_NEUTRAL
+IDD_CHART DIALOGEX 40, 30, 420, 260
+	STYLE WS_OVERLAPPEDWINDOW | WS_CAPTION | WS_SYSMENU
+	CAPTION ""
+	FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+END
+
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 IDC_MENU_MAIN MENU
 BEGIN
@@ -413,6 +422,7 @@ BEGIN
 		MENUITEM "Shortcuts", IDM_HOTKEYS
 		MENUITEM "Extensions", IDM_EXTENSIONS
 		MENUITEM "Tips", IDM_TIPS
+		MENUITEM "Wiki", IDM_WIKI
 		POPUP "Get database"
 		BEGIN
 			MENUITEM "Bookstore", IDM_DEMODB_BOOKSTORE
@@ -547,6 +557,8 @@ IDC_MENU_RESULT MENU
 BEGIN
 	POPUP "Result"
 	BEGIN
+		MENUITEM "View as chart", IDM_RESULT_CHART
+		MENUITEM SEPARATOR
 		MENUITEM "Copy cell to clipboard", IDM_RESULT_COPY_CELL
 		MENUITEM "Copy row to clipboard", IDM_RESULT_COPY_ROW
 		MENUITEM SEPARATOR
@@ -625,7 +637,7 @@ BEGIN
 	IDS_CREATE_VIEW "create view myview\nas\nselect * from mytable"
 	IDS_CREATE_INDEX "-- create [unique] index [if not exists] [schema.]<index-name>\n-- on <table-name>\n-- (<indexed-column1> [asc|desc], <indexed-column2> ...)\n-- [where conditions] <- partial index\ncreate index idx_mytable on mytable (\n  ""colA"" desc,\n  ""colB"" asc\n) where colA is not null"
 	IDS_CREATE_TRIGGER "-- create [TEMP] trigger [if not exists] [schema.]<trigger-name>\n-- {before|after|instead of} {delete|insert|update|update of column1, column2, ...} on <table-name>\n-- when <expression>\n-- begin\n-- <some-statements: use NEW. and OLD. to refs>;\n-- end.\ncreate trigger trg_mytable_insert\nafter insert on mytable\nwhen id > 10\n\nbegin\n  insert into mytable2\n  select NEW.id, NEW.name;\nend;"
-	IDS_ABOUT "Sqlite-gui is a visual tool for SQLite database.\nVisit our homepage to get the source code and latest binaries.\n\nLittle Brother (c) 2020\nlb.im@ya.ru"
+	IDS_ABOUT "Sqlite-gui is a visual tool for SQLite database.\nVisit our homepage to get the source code and latest binaries.\n\nLittle Brother (c) 2020-2021\nlb.im@ya.ru"
 	IDS_HOTKEYS "Global\n" \
 		"Esc - App exit\n" \
 		"F5 - Refresh navigation tree\n" \
@@ -662,7 +674,7 @@ BEGIN
 		"* To edit data in an attached database or temp schema, type in Editor\n  <db alias>.<tablename>, e.g. preferences.history\n   and click with holding Ctrl by it.\n\n"
 		"* SQLite supports a limited subset of ALTER. So there is not GUI allows\n   remove/reorder column to an existing table or something like this.\n\n" \
 		"* Do you need a newer version of sqlite?\n  Just replace sqlite3.dll! 32-bit version is required.\n\n" \
-		"* Data generator requires ora extension (implemented rownum function).\n\n" \
+		"* Data generator requires ora extension.\n\n" \
 		"* Disabled indexes and triggers are stored in ""preferences.disabled"" table.\n\n" \
 		"Cons\n* Only utf-8 is supported\n* NULL is displayed as an empty string\n* An empty string is set to NULL when data is edit\n* Data diagram isn't accurate with building references in views/triggers\n"
 	IDS_EXTENSIONS "Json1\n" \
