--- a/sqlite-gui.cbp
+++ b/sqlite-gui.cbp
@@ -40,8 +40,11 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
+			<Add option="-std=c++11" />
 		</Compiler>
 		<Linker>
+			<Add option="-static-libgcc" />
+			<Add option="-static-libstdc++ -static-libgcc" />
 			<Add library="gdi32" />
 			<Add library="user32" />
 			<Add library="kernel32" />
